# sparkplugbCPP

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
examples/: CMakeLists.txt  MqttClientImpl.cpp  host_app_example.cpp
include/: HostApp.h  IMQTTClient.h
proto/: sparkplug_b.proto
src/: HostApp.cpp
